--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,87 +1,63 @@
 <div class="filter-section">
-    <div class="row">
-        <div class="filter-section__item m-b-1 col-lg-4 col-sm-6">
-            <label class="fw-bold">Rama</label>
-            <select class="form-select">
-                <option value="">Todas</option>
-            </select>
+    <form [formGroup]="formData"
+          (ngSubmit)="searchData()">
+        <div class="row">
+            <div class="filter-section__item m-b-1 col-lg-4 col-sm-6">
+                <label class="fw-bold">Rama</label>
+                <select class="form-select"
+                        formControlName="rama">
+                    <option value="0">Todas</option>
+                    <option *ngFor="let rama of ramasData" [value]="rama.nroRama">{{ rama.Rama }}</option>
+                </select>
+            </div>
+            <div class="filter-section__item m-b-1 col-lg-4 col-sm-6">
+                <label class="fw-bold">Siniestro</label>
+                <input class="form-control" 
+                       type="text"
+                       formControlName="siniestro">
+            </div>
+            <div class="filter-section__item m-b-1 col-lg-4 col-sm-6">
+                <label class="fw-bold">Póliza</label>
+                <input class="form-control" 
+                       type="text"
+                       formControlName="poliza">
+            </div>
+            <div class="filter-section__item col-lg-4 col-sm-6">
+                <label class="fw-bold">Riesgo / Patente</label>
+                <input class="form-control" 
+                       type="text"
+                       formControlName="riesgo">
+            </div>
+            <div class="filter-section__item col-lg-4 col-sm-6">
+                <label class="fw-bold">Socio</label>
+                <input class="form-control" 
+                       type="text"
+                       formControlName="socio">
+            </div>
+            <div class="filter-section__item col-lg-4 col-sm-6">
+                <label class="fw-bold">Nro. referencia</label>
+                <input class="form-control" 
+                       type="text"
+                       formControlName="nroReferencia">
+            </div>
         </div>
-        <div class="filter-section__item m-b-1 col-lg-4 col-sm-6">
-            <label class="fw-bold">Siniestro</label>
-            <input class="form-control" type="text">
+        <div class="row">
+            <div class="filter-section__item--buttons col-lg-4 col-sm-6">
+                <button class="btn btn-primary me-3"
+                        type="submit">Buscar</button>
+                <button class="btn btn-outline-secondary"
+                        type="button"
+                        (click)="this.formData.reset()">Limpiar</button>
+            </div>
         </div>
-        <div class="filter-section__item m-b-1 col-lg-4 col-sm-6">
-            <label class="fw-bold">Póliza</label>
-            <input class="form-control" type="text">
-        </div>
-        <div class="filter-section__item col-lg-4 col-sm-6">
-            <label class="fw-bold">Riesgo / Patente</label>
-            <input class="form-control" type="text">
-        </div>
-        <div class="filter-section__item col-lg-4 col-sm-6">
-            <label class="fw-bold">Socio</label>
-            <input class="form-control" type="text">
-        </div>
-        <div class="filter-section__item col-lg-4 col-sm-6">
-            <label class="fw-bold">Nro. referencia</label>
-            <input class="form-control" type="text">
-        </div>
-    </div>
-    <div class="row">
-        <div class="filter-section__item--buttons col-lg-4 col-sm-6">
-            <button class="btn btn-primary me-3">Buscar</button>
-            <button class="btn btn-outline-secondary">Limpiar</button>
-        </div>
+    </form>
+
+    <div class="table-section">
+        <app-table [tableData]="dataSiniestros" [displayedColumns]="displayedColumns"></app-table>
     </div>
 
-    <div class="table-siniestros mat-elevation-z8" > 
-        <table mat-table [dataSource]="dataSource" multiTemplateDataRows>
-            <!-- Column -->
-            <ng-container matColumnDef="{{column}}" *ngFor="let column of displayedColumns">
-                <th mat-header-cell *matHeaderCellDef> {{ column }} </th>
-                <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
-            </ng-container>
-        
-            <ng-container matColumnDef="expand">
-                <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
-                <td mat-cell *matCellDef="let element">
-                <button mat-icon-button aria-label="expand row" (click)="(expandedElement = expandedElement === element ? null : element); $event.stopPropagation()">
-                    <mat-icon *ngIf="expandedElement !== element">keyboard_arrow_down</mat-icon>
-                    <mat-icon *ngIf="expandedElement === element">keyboard_arrow_up</mat-icon>
-                </button>
-                </td>
-            </ng-container>
+    <div class="card-section">
 
-            <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-            <ng-container matColumnDef="expandedDetail">
-                <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplayWithExpand.length">
-                <div class="example-element-detail"
-                    [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-                    <div class="example-element-diagram">
-                    <div class="example-element-position"> {{element.position}} </div>
-                    <div class="example-element-symbol"> {{element.symbol}} </div>
-                    <div class="example-element-name"> {{element.name}} </div>
-                    <div class="example-element-weight"> {{element.weight}} </div>
-                    </div>
-                    <div class="example-element-description">
-                    asdasda
-                    <span class="example-element-description-attribution"> -- Wikipedia </span>
-                    </div>
-                </div>
-                </td>
-            </ng-container>
-        
-            <tr mat-header-row *matHeaderRowDef="columnsToDisplayWithExpand"></tr>
-            <tr mat-row *matRowDef="let element; columns: columnsToDisplayWithExpand;"
-                class="example-element-row"
-                [class.example-expanded-row]="expandedElement === element"
-                (click)="expandedElement = expandedElement === element ? null : element">
-            <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
-        </table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                        showFirstLastButtons
-                        aria-label="Select page of periodic elements">
-        </mat-paginator>
     </div>
 
 </div>
