--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -9,6 +9,10 @@
         padding: 4rem 6rem;
     }
 
+    @media(max-width: 860px) {
+        padding: 4rem 2rem;
+    }
+
     &__item {
         display: flex;
         flex-direction: column;
@@ -35,6 +39,24 @@
     }
 }
 
-.table-section {
+.table-section, .card-section {
     margin-top: 2rem;
+}
+
+@media (min-width: 768px) {
+    .mobileView {
+        display: none;
+    }
+    .desktopView {
+        display: block;
+    }
+}
+
+@media(max-width: 768px) {
+    .mobileView {
+        display: block;
+    }
+    .desktopView {
+        display: none;
+    }
 }
